Renamed folder and fixed mobile overflow

--- a/css/projects.css
+++ b/css/projects.css
@@ -7,10 +7,11 @@
     padding: 2vw;
     border-radius: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     max-width: 1500px;
     gap: 20px;
     margin-inline: auto;
+    /* box-sizing: border-box; */
 }
 
 video {
